<resources>
    <string name="app_name">AppCajaCucei</string>



    <string name="Language_selected">English is selected</string>

    <!-- pallet spiner TODO: add languaje later -->

    <!-- pallet spiner TODO: if you change the array you need to change the values in the code -->
    <string-array name="pallets_options">
        <item>@string/Spinner_pallet</item>
        <item>1: 200 X 200 X 200 mm</item>
        <item>2: 300 X 150 X 100 mm </item>
        <item>3: 200 X 150 X 400 mm </item>
        <item>4: 200 X 400 X 150 mm </item>
        <item>5: 200 X 200 X 200 mm</item>
        <item>6: 400 X 150 X 200 mm</item>
    </string-array>
    <!--
        <item>0: TARIMA </item>
        <item>1: EUR </item>
        <item>2: EUR2 </item>
        <item>3: EUR6 </item>
        <item>4: North America </item>
        <item>5: Australia</item>
        <item>6: Asia</item>
    -->


    <string-array name="container_options">
        <item>0: CONTENEDOR </item>
        <item>1: REMOLQUE 53 PIES </item>
        <item>2: REMOLQUE 48 PIES </item>
        <item>3: REMOLQUE 28 PIES </item>
        <item>4: THORTON </item>
        <item>5: RABON</item>
        <item>6: CAMIONETA 3.5 TON</item>
        <item>7: MARITIMO 40 PIES</item>
        <item>8: MARITIMO 2O PIES</item>
    </string-array>

    <string name="Spinner_pallet">0: PALLET</string>

    <string name="Item_DIMENSIONES">DIMENTIONS</string>
    <string name="sis_international">International </string>
    <string name="Sis_Ingles">Imperial</string>
    <string name="item_CANTIDAD">QUANTITY</string>
    <string name="item_Alto">HEIGHT</string>
    <string name="item_ancho">WIDTH</string>
    <string name="item_LARGO">LENGTH</string>
    <string name="item_WEIGHT">WEIGHT</string>
    <string name="item_DIAMETRO">DIAMETER</string>
    <string name="item_radioMAYOR">LARGER RADIUS</string>
    <string name="item_radioMENOR">SMALLER RADIUS</string>
    <string name="box_internas">INTERNALS</string>
    <string name="mckee_valorMckee">MACKEE VALUE</string>
    <string name="mckee_calibre">CALIBER</string>
    <string name="mckee_etcValue">ETC</string>
    <string name="fraf_empa_envasesperpaquete">Items per package:</string>
    <string name="frag_empa_Volumenusado">Volume used:</string>
    <string name="frag_empa_paquetesUsados">Packages</string>
    <string name="itemMasGrandequeCaja">The item it\'s bigger than the box!</string>
    <string name="cantidadMissing">Quantity value not found!</string>
    <string name="inputBase_continuar_Crear">Do you wish to continue adding data or to create the report with current data?</string>
    <string name="inputBase_continuar">continue</string>
    <string name="inputBase_crear">create report</string>
    <string name="inputBase_plzSelectOpt">please select an option</string>
    <string name="frag_container_capacidad">CAPACITY</string>
    <string name="frag_container_max_peso">MAX WEIGHT</string>
    <string name="frag_entari_volumen">Volume</string>
    <string name="frag_entari_area">Area</string>
    <string name="frag_entari_piezas">Pieces</string>
    <string name="frag_entari_cajas">Boxes</string>
    <string name="frag_entari_cajPpallet">Boxes per pallet</string>
    <string name="frag_ContainerRes_numPallets">Pallets</string>
    <string name="selec_file_to_share"> Select the file to share</string>
    <string name="plz_selectopt2">please select an option</string>


</resources>
