<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="udg.cucei.appcajacucei.OutputModule.Frag_ContenedorResutls"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/imgVPlaceHolder_Contenedor"
            android:src="@drawable/outputmodule_frag_contenedor_contenedor_000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView7"
            android:layout_alignBottom="@+id/imgVPlaceHolder_Contenedor"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="29dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_entari_volumen"
            android:id="@+id/textView9"
            android:layout_marginStart="82dp"
            android:layout_marginTop="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_entari_area"
            android:id="@+id/textView11"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView9"
            android:layout_alignStart="@+id/textView9"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_entari_piezas"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_entari_cajas"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView12"
            android:layout_alignStart="@+id/textView12"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_entari_cajPpallet"
            android:id="@+id/textView14"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView13"
            android:layout_alignStart="@+id/textView13"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lblVolumen_Contenedor"
            android:layout_marginStart="80dp"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_toEndOf="@+id/textView14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lblArea_Contenedor"
            android:layout_alignTop="@+id/textView11"
            android:layout_alignStart="@+id/lblVolumen_Contenedor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lblPiezas_Contenedor"
            android:layout_alignTop="@+id/textView12"
            android:layout_alignStart="@+id/lblArea_Contenedor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lblCajas_Contenedor"
            android:layout_alignTop="@+id/textView13"
            android:layout_alignStart="@+id/lblPiezas_Contenedor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lblCajaspCama_Contenedor"
            android:layout_alignTop="@+id/textView14"
            android:layout_alignStart="@+id/lblCajas_Contenedor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_ContainerRes_numPallets"
            android:id="@+id/textView16"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView14"
            android:layout_alignStart="@+id/textView14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lblTarimas_Contenedor"
            android:layout_alignTop="@+id/textView16"
            android:layout_alignStart="@+id/lblCajaspCama_Contenedor"/>
    </RelativeLayout>

</LinearLayout>
