<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".OutputModule.Frag_EmpaquetadoResults"
              android:paddingLeft="10dp"
              android:weightSum="1"
    >

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fraf_empa_envasesperpaquete"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lbl_numitems"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_empa_Volumenusado"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lbl_volpack"
            android:layout_alignBaseline="@+id/textView8"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignLeft="@+id/lbl_numitems"
            android:layout_alignStart="@+id/lbl_numitems" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_empa_paquetesUsados"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n"
            android:id="@+id/lbl_numPacks"
            android:layout_below="@+id/lbl_volpack"
            android:layout_alignLeft="@+id/lbl_volpack"
            android:layout_alignStart="@+id/lbl_volpack" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView3"
            android:background="@drawable/image_view_border"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/frag_maque_frasco_vertical"
            android:padding="7dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:weightSum="1"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/LinLaySideView"
                android:background="@drawable/image_view_border"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:layout_weight="0.40"
                android:gravity="center">

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/image_view_border"
                android:layout_weight="0.40"
                android:id="@+id/LinLayTopView"
                android:padding="5dp"></LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.70">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView4"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:src="@drawable/frag_empaquetado_results_caja"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:src="@drawable/frag_maque_frasco_vertical"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
